--- a/src/Technician/Otp.css
+++ b/src/Technician/Otp.css
@@ -1,9 +1,10 @@
 .wrapper-shopkeeperdetails{
     width: 380px;
+    
     background: #fff;
     border-radius: 15px;
     box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
-    margin: 150px auto;
+    margin: 200px auto !important;
   }
   .wrapper-shopkeeperdetails .title{
     font-size: 35px;
